Fixes to math logic and site-wide UX updates

--- a/index.html
+++ b/index.html
@@ -33,24 +33,8 @@
   </head>
 
   <body>
-    <!-- Static fallback content for SEO & accessibility -->
-    <div id="root">
-      <main>
-        <h1>Property Management for Kenyan Landlords</h1>
-
-        <p>
-          Keja-Connect is a mobile-first property management app designed for
-          Kenyan landlords and property managers. Easily manage properties,
-          units, tenants, expenses, and automatically reconcile M-Pesa payments
-          in one secure platform.
-        </p>
-
-        <nav>
-          <a href="/contact">Contact</a> |
-          <a href="/privacy">Privacy Policy</a>
-        </nav>
-      </main>
-    </div>
+    <div id="root"></div>
+    <noscript>Keja-Connect requires JavaScript to run.</noscript>
 
     <!-- React app -->
     <script type="module" src="/src/main.tsx"></script>
